[gd_scene load_steps=2 format=2]

[ext_resource path="res://slider/slider.gd" type="Script" id=1]

[node name="HBoxContainer" type="HBoxContainer"]
margin_top = 142.0
margin_right = 478.0
margin_bottom = 158.0
script = ExtResource( 1 )

[node name="Label3" type="Label" parent="."]
margin_top = 1.0
margin_right = 82.0
margin_bottom = 15.0
text = "MUSIC:100%"

[node name="HSlider3" type="HSlider" parent="."]
margin_left = 86.0
margin_right = 478.0
margin_bottom = 16.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[connection signal="value_changed" from="HSlider3" to="." method="_on_HSlider3_value_changed"]
